--- a/WebContent/partials/modal.volumeAction.html
+++ b/WebContent/partials/modal.volumeAction.html
@@ -4,11 +4,56 @@
 <div class="modal-body">
     <p>You are going to {{action.description}} for: </p>
     <blockquote>
-        <div ng-show="selectedVolumes.length<=maxVolumeDisplay">
+        <div ng-show="selectedVolumes.length<=maxVolumeDisplay&&actionType != 'restore'">
             <div class="h4 text-primary" ng-repeat="volume in selectedVolumes">{{volume.volumeId}}</div>
         </div>
         <p ng-hide="selectedVolumes.length<=maxVolumeDisplay">{{selectedVolumes.length}} selected volumes</p>
-        <p ng-show="actionType === 'restore'"><span>Volume's last backup will be used</span></p>
+        <p ng-show="actionType === 'restore'">
+            <span>Volume's last backup will be used</span>
+            <table class="table">
+            <tr>
+                <th>Volume</th>
+                <th>Action</th>
+                <th>Value</th>
+            </tr>
+
+            <tr ng-repeat="volume in selectedVolumes track by $index">
+                <td>{{volume.volumeId}}</td>
+                <td>
+                    <span dropdown>
+                        <a href dropdown-toggle>{{volume.restoreAction ? volume.restoreAction :restoreActions[0]}}</a>
+                        <ul class="dropdown-menu" >
+                            <li ng-repeat="action in restoreActions">
+                                <a href ng-click="selectAction(volume, action)">{{action}}</a>
+                            </li>
+                        </ul>
+                    </span>
+                </td>
+                <td ng-if="volume.restoreAction!='Attach to instance'">
+                    <span dropdown>
+                        <a href dropdown-toggle>{{volume.zone ? volume.zone : selectedZone || "current"}}</a>
+                        <ul class="dropdown-menu" >
+                            <li ng-repeat="zone in zones">
+                                <a href ng-click="selectZone(volume, zone)">{{zone}}</a>
+                            </li>
+                        </ul>
+                    </span>
+                </td>
+
+                <td ng-if="volume.restoreAction=='Attach to instance'">
+                    <span dropdown>
+                        <a href dropdown-toggle>{{volume.instanceId ? volume.instanceId : instance}}</a>
+                        <ul class="dropdown-menu" >
+                            <li ng-repeat="instance in instances">
+                                <a href ng-click="selectInstance(volume, instance)">{{instance}}</a>
+                            </li>
+                        </ul>
+                    </span>
+                </td>
+
+            </tr>
+        </table>
+        </p>
     </blockquote>
 
     <div ng-show="action.type == 'schedule'">
@@ -38,17 +83,7 @@
         <!-- enabled end-->
     </div>
 
-    <div ng-show="action.type == 'restore'">
-        Restore will be done to
-        <span dropdown>
-            <a href dropdown-toggle>{{selectedZone || "current"}}</a>
-            <ul class="dropdown-menu" >
-                <li ng-repeat="zone in zones">
-                    <a href ng-click="selectZone(zone)">{{zone}}</a>
-                </li>
-            </ul>
-        </span> availability zone
-    </div>
+
 
     <p> Do you want to {{action.description}} now?</p>
 </div>
