--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1248,3 +1248,11 @@ div.tr.state-removed {
 /* end of view-specific styling*/
 /* end of Color scheme */
 
+/*restore table*/
+
+.restore-table td, .restore-table th {
+    width: 180px;
+    display: inline-block;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
