--- a/WebContent/partials/modal.backup-delete-result.html
+++ b/WebContent/partials/modal.backup-delete-result.html
@@ -2,20 +2,19 @@
     <h3 class="modal-title"><span class="glyphicon glyphicon-cloud-download"></span>&nbsp; Backup</h3>
 </div>
 <div class="modal-body">
-    <p ng-show="!deleteErrors || deleteErrors.length == 0">Backup delete operation successfully added to the task queue!</p>
+    <p ng-show="!deleteErrors || deleteErrors.length == 0">Backup removed successfully!</p>
 
-    <p ng-show="deleteErrors && deleteErrors.length == selectedBackups.length"> Failed to add delete operation to task queue! </p>
+    <p ng-show="deleteErrors && deleteErrors.length == selectedBackups.length"> Failed to remove backup! </p>
     <div ng-show="deleteErrors && deleteErrors.length > 0 && deleteErrors.length < selectedBackups.length">
-        <p>Some of selected backups failed to be added to task queue.
+        <p>Failed to remove some of selected backups.
             <blockquote>
-                <p>Successfully added {{selectedBackups.length - deleteErrors.length}}</p>
-                <p>Failed {{deleteErrors.length}}</p>
+                <p>Backup successfully removed {{selectedBackups.length - deleteErrors.length}}</p>
+                <p>Failed to remove backup {{deleteErrors.length}}</p>
             </blockquote>
         </p>
     </div>
 </div>
 <div class="modal-footer">
-    <a class="btn btn-success" ng-click="$close()"><span class="glyphicon glyphicon-tasks"></span>&nbsp; Go to Tasks</a>
-    <a class="btn btn-default" ng-click="$dismiss()"><span class="glyphicon glyphicon-list"></span>&nbsp; Stay on History</a>
+    <a class="btn btn-default" ng-click="$dismiss()"><span></span> Ok </a>
 </div>
 
