--- a/WebContent/partials/modal.backup-delete.html
+++ b/WebContent/partials/modal.backup-delete.html
@@ -3,7 +3,7 @@
         <h3 class="modal-title"><span class="glyphicon glyphicon-cloud-download"></span>&nbsp; Backup</h3>
     </div>
     <div class="modal-body">
-        <p>You are going to start backup delete process for: </p>
+        <p>You are going to delete backup: </p>
 
         <blockquote >
             <p ng-show="selectedBackups.length<=maxDeleteBackupDisplay">
