--- a/WebContent/assets/styles/style.css
+++ b/WebContent/assets/styles/style.css
@@ -662,7 +662,7 @@ div.tr.state-removed {
 
 .chb.checked {
     background-color: #009f65;
-    /*color: white;*/
+    color: white;
     border: none;
 }
 
