--- a/WebContent/partials/settingsSnsNotification.html
+++ b/WebContent/partials/settingsSnsNotification.html
@@ -8,9 +8,8 @@
                         <input type="text"
                                class="form-control col-sm-4"
                                placeholder="Type topic..."
-                               value={{SnsTopic.topic}}>
+                               ng-model="SnsTopic.topic">
                           <span class="input-group-btn">
-                              {{notification}}
                             <button class="btn btn-primary" type="button" ng-click="applyTopic()">Apply</button>
                           </span>
                     </div>
@@ -23,31 +22,37 @@
 <div class="card">
     <div class="flex-container">
         <div class="flex-5 card-content flex-center row">
+            <form name="ruleSettings">
                 <div class="col-sm-12 form-group">
                     <h3>Create rule</h3>
                     <div class="settings field-label col-sm-4 text-right">Operation:</div>
                     <div class="text-left col-sm-4">
-                        <select ng-options="option for option in settings.systemProperties.volumeTypeOptions"
-                                ng-model="settings.systemProperties.restoreVolumeType"
-                                class="form-control">
+                        <!--change model here-->
+                        <select ng-options="option for option in SnsOperations.operations"
+                                ng-model="SnsRule.operation"
+                                class="form-control"
+                                required>
                         </select>
                     </div>
                 </div>
                 <div class="col-sm-12 form-group">
                     <div class="settings field-label col-sm-4 text-right">Status:</div>
                     <div class="text-left col-sm-4">
-                        <select ng-options="option for option in settings.systemProperties.volumeTypeOptions"
-                                ng-model="settings.systemProperties.restoreVolumeType"
-                                class="form-control">
+                        <!--change model here-->
+                        <select ng-options="option for option in SnsStatus.statuses"
+                                ng-model="SnsRule.status"
+                                class="form-control"
+                                required>
                         </select>
                     </div>
                 </div>
                 <div class="col-sm-12 form-group">
                     <div class="settings field-label col-sm-4 text-right">Volume ID:</div>
                     <div class="text-left col-sm-4">
-                        <select ng-options="option for option in settings.systemProperties.volumeTypeOptions"
-                                ng-model="settings.systemProperties.restoreVolumeType"
-                                class="form-control">
+                        <select ng-options="option for option in volumesIds"
+                                ng-model="SnsRule.volumeId"
+                                class="form-control"
+                                required>
                         </select>
                     </div>
                     <div class="col-sm-3">
@@ -55,8 +60,8 @@
                             Apply </button>
                     </div>
                 </div>
-
-            </div>
+                <div class="col-sm-12 text-danger small" ng-show="ruleSettings.$error.required"> {{STRINGS.otherSettings.empty}} </div>
+            </form>
         </div>
     </div>
 </div>
@@ -74,15 +79,15 @@
                     <th class="text-center">Volume Id</th>
                     <th class="action text-center">Action</th>
                 </tr>
-                <tr>
-                    <td class="text-center">1</td>
-                    <td class="text-center">System backup</td>
-                    <td class="text-center">Fail</td>
-                    <td class="text-center">-</td>
+                <tr ng-model="SnsRule" ng-repeat="rule in SnsRule track by $index">
+                    <td class="text-center" ng-bind='rule.id'></td>
+                    <td class="text-center" ng-bind='rule.operation'></td>
+                    <td class="text-center" ng-bind='rule.status'></td>
+                    <td class="text-center" ng-bind='rule.volumeId||"-"'></td>
                     <td class="text-center">
                         <div class="action for-view-mode">
                             <button class="btn" style="background: white">
-                                <span class="glyphicon glyphicon-trash" tooltip="Remove"></span>
+                                <span class="glyphicon glyphicon-trash" tooltip="Remove" ng-click='removeRule($index)'></span>
                             </button>
                         </div>
                     </td>
