SNAP-524: fix 'save changes btn' in email notification tab

--- a/WebContent/partials/settingsEmailNotification.html
+++ b/WebContent/partials/settingsEmailNotification.html
@@ -118,11 +118,10 @@
             <div class="form-group form-buttons">
 
                 <button class="btn btn-primary"
-                        ng-click="$close()"
+                        ng-click="updateSettings()"
                         ng-disabled="emailNotifications.$invalid">
                     Save Changes
                 </button>
-                <button class="btn btn-default" ng-click="$dismiss()">Cancel</button>
 
             </div>
         </form>
