SNAP-524: fix review comments

--- a/WebContent/partials/settings.html
+++ b/WebContent/partials/settings.html
@@ -20,10 +20,26 @@
         <div class="container">
             <div>
                 <ul class="nav nav-pills navbar-left clear-right">
-                    <li ui-sref-active="active"><a ui-sref="app.settings.systemInfo"><span>System information</span></a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.settings.system"><span>System settings</span></a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.settings.snsNotification"><span>SNS notifications</span></a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.settings.emailNotification"><span>Email notifications</span></a></li>
+                    <li ui-sref-active="active">
+                        <a ui-sref="app.settings.systemInfo">
+                            <span>System information</span>
+                        </a>
+                    </li>
+                    <li ui-sref-active="active">
+                        <a ui-sref="app.settings.system">
+                            <span>System settings</span>
+                        </a>
+                    </li>
+                    <li ui-sref-active="active">
+                        <a ui-sref="app.settings.snsNotification">
+                            <span>SNS notifications</span>
+                        </a>
+                    </li>
+                    <li ui-sref-active="active">
+                        <a ui-sref="app.settings.emailNotification">
+                            <span>Email notifications</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
